--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>@font-face {
+        font-family: "Gilroy";
+        src: url("font/Gilroy-Regular.woff") format("woff");
+    }
+    </style>
     <title>React App</title>
 </head>
 <body>
